# football-worldcup-simulator

./: .gitmodules
simulation/: CMakeLists.txt  Match.cpp  Simulation.cpp  Tournament.cpp  tmpCMakeLists.txt
